设置了别名，添加一些css工具

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- 设置minimum-scale,maximum-scale,er-scalable 保证用户不能通过手指放大缩小界面，保持界面比例 -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,er-scalable=no">
     <title>travel</title>
   </head>
   <body>
